2023-07-14T16:25:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5556188798 # 605
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 179 400 / 199 435
* notice: next accum: outdated-unq outdated-all / unq all: 180 401 / 199 436
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-06-30] / [2023-07-14]

2023-07-14T02:01:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5549678400 # 603
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 178 398 / 198 434
* notice: next accum: outdated-unq outdated-all / unq all: 179 400 / 199 435
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-06-29] / [2023-07-14]

2023-07-13T16:26:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5545541619 # 602
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 178 398 / 198 433
* notice: next accum: outdated-unq outdated-all / unq all: 178 398 / 198 434
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-13]

2023-07-13T08:25:42Z: