@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-14T16:25:16Z",
-  "count_outdated" : 401,
-  "uniques_outdated" : 180,
-  "count" : 436,
-  "uniques" : 199,
+  "timestamp" : "2023-07-15T08:23:39Z",
+  "count_outdated" : 402,
+  "uniques_outdated" : 181,
+  "count" : 437,
+  "uniques" : 200,
   "clones" : [
-    {
-      "timestamp": "2023-07-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 8,
@@ -91,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
