@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2023-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-03T00:00:00Z",
       "count": 8,
       "uniques": 3
@@ -50,6 +45,11 @@
     {
       "timestamp": "2023-07-14T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
