@@ -1,3 +1,12 @@
+2023-07-15T08:23:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5561289525 # 607
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
+* notice: last 14d: unq all: 8 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 180 401 / 199 436
+* notice: next accum: outdated-unq outdated-all / unq all: 181 402 / 200 437
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-01] / [2023-07-15]
+
 2023-07-14T16:25:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5556188798 # 605
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
